--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ text-transform: capitalize;
     .about{
         display: flex;
         background-image: url(images/shapes/7.png);
+
     }
     .about-part img{
         width: 400px;
@@ -61,3 +62,73 @@ text-transform: capitalize;
         padding-bottom: 10%;
         line-height: 30px;
     }
+    .rcp-section{
+        width: 600px;
+        margin: auto;
+        text-align: center;
+    }
+    .rcp-section h3{
+        margin-top: 100px;
+    color:rgb(128, 124, 124);
+    font-size: 30px;
+
+    }
+    .recipies-content{
+        display:flex;
+       padding-left: 3%;
+       padding-right: 3%;
+    margin-bottom: 50px;
+    }
+    .recipies-box{
+        width: 35%;
+        height: 10%;
+        padding: 20px;
+      float: left;
+        background: white;
+        border-radius: 20px;
+        box-shadow: 1px 1px 40px rgb(228, 224, 217);
+        margin: 20px;
+    }
+    .recipies-box img{
+        width: 100%;
+        height: 60%;
+        border-radius: 30px;
+    }
+   .percent-box{
+       display: flex;
+       box-shadow: 1px 1px 40px rgb(228, 224, 217);
+       margin-left: 50px;
+       margin-right: 50px;
+   }
+   .box{
+    width: 100%;
+    height: 40%;
+   background: white;
+   text-align: center;
+  
+}
+.percent-box h1{
+    font-weight: bold;
+    font-size: 48px;
+}
+.percent-box p{
+    font-size: 25px;
+}
+footer{
+    background: black;
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    padding: 13px;
+}
+footer h3 span{
+color: orangered;
+}
+footer h3{
+    color: #5b5b5b;
+    font-size: 30px;
+}
+footer p{
+    color: rgb(187, 184, 184);
+    letter-spacing: 1px;
+}
