--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ text-transform: capitalize;
     font-size: 25px;
 }
 footer{
+    margin-top: 60px;
     background: black;
     width: 100%;
     height: 200px;
